Fix display overflow behavior

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
     font-size: 30px;
     margin: 10px 1px;
     padding: 10px;
+    width: 198px;
     border: 2px solid whitesmoke;
     background-color: #5f5f5f;
 }
